<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="text_hello_world">Hello World!</string>
    <string name="text_masai">Masai</string>
    <string name="text_parent_center">Parent center</string>
    <string name="text_center_horizontal">Center horizontal</string>
    <string name="text_center_vertical">Center Vertical</string>
    <string name="text_parent_end">Parent end</string>
    <string name="text_parent_bottom">Parent bottom</string>
    <string name="text_parent_start">Parent start</string>
    <string name="text_parent_right_corner">Parent right bottom</string>
</resources>