<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCenterHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_center_horizontal"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:layout_below="@+id/tvCenterHorizontal"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tvHelloWorld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_hello_world"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvMasaiSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/text_masai"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/text_hello_world" />
    </RelativeLayout>
</RelativeLayout>